src/test/deca/context/invalid/object/methode-inexistante.deca
// Description :
//  Test appel d'une méthode inexistante.
// Résultats :
//    Erreur : Méthode 'nonexistentMethod' non définie.
// Historique :
//    créé le 19/01/2025
class Dummy {}

{
    Dummy d = new Dummy();
    d.nonexistentMethod(); 
}